Fixing a bug when the description of the content part is too long we couldn't click the remove link.

--- a/src/Orchard.Web/Modules/Orchard.ContentTypes/Styles/orchard-contenttypes-admin.css
+++ b/src/Orchard.Web/Modules/Orchard.ContentTypes/Styles/orchard-contenttypes-admin.css
@@ -46,6 +46,7 @@
 .manage-part h3, .manage-field h3 {
     margin: 1em 0 !important;
     padding-left: 30px;
+    width: 90%;
 }
 
 .manage-part .expando-glyph, .manage-field .expando-glyph {
